--- a/src/main/webapp/app/entities/location/location-dialog.component.html
+++ b/src/main/webapp/app/entities/location/location-dialog.component.html
@@ -2,31 +2,41 @@
 
     <div class="modal-header">
         <h4 class="modal-title" id="myLocationLabel">Create or edit a Location</h4>
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true" (click)="clear()">&times;</button>
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
+                (click)="clear()">&times;</button>
     </div>
     <div class="modal-body">
         <jhi-alert-error></jhi-alert-error>
         <div class="form-group" [hidden]="!location.id">
             <label for="id">ID</label>
-            <input type="text" class="form-control" id="id" name="id" [(ngModel)]="location.id" readonly />
+            <input type="text" class="form-control" id="id" name="id"
+                   [(ngModel)]="location.id" readonly />
         </div>
         <div class="form-group">
             <label class="form-control-label" for="field_name">Name</label>
-            <input type="text" class="form-control" name="name" id="field_name" [(ngModel)]="location.name" />
+            <input type="text" class="form-control" name="name" id="field_name"
+                [(ngModel)]="location.name"  />
         </div>
         <div class="form-group">
             <label class="form-control-label" for="field_coordinatesAsString">Coordinates As String</label>
-            <input type="text" class="form-control" name="coordinatesAsString" id="field_coordinatesAsString" [(ngModel)]="location.coordinatesAsString"
-            />
+            <input type="text" class="form-control" name="coordinatesAsString" id="field_coordinatesAsString"
+                [(ngModel)]="location.coordinatesAsString"  />
+        </div>
+        <div class="form-group">
+            <label class="form-control-label" for="field_coordinates">Coordinates</label>
+            <input type="text" class="form-control" name="coordinates" id="field_coordinates"
+                [(ngModel)]="location.coordinates"  />
+        </div>
+
+        <div class="form-group">
+            <label class="form-control-label" for="field_coords">Coords</label>
+            <select class="form-control" id="field_coords" name="coords" [(ngModel)]="location.coords" >
+                <option [ngValue]="null"></option>
+                <option [ngValue]="coordinatesOption.id === location.coords?.id ? location.coords : coordinatesOption" *ngFor="let coordinatesOption of coordinates; trackBy: trackCoordinatesById">{{coordinatesOption.latLong}}</option>
+            </select>
         </div>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="startEditing()">
-            <span class="fa fa-ban"></span>&nbsp;<span>Start Editing</span>
-        </button>
-        <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="stopEditing()">
-            <span class="fa fa-ban"></span>&nbsp;<span>Stop Editing</span>
-        </button>
         <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="clear()">
             <span class="fa fa-ban"></span>&nbsp;<span>Cancel</span>
         </button>
